GRAXConnect/main/default/objects/GRAX_Data_Record__c/GRAX_Data_Record__c.object-meta.xml
<CustomObject>
    <label>GRAX Data Record</label>
    <nameField>
        <displayFormat>GRAX-{0000000}</displayFormat>
        <label>GRAX Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GRAX Data Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>