GRAXConnect/main/default/objects/GRAX_Data_Record__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Error_Message</description>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>