GRAXConnect/main/default/objects/GRAX_Data_Record__c/fields/GRAX_Archive_Process__c.field-meta.xml
<CustomField>
    <fullName>GRAX_Archive_Process__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>GRAX Archive Process</label>
    <referenceTo>GRAX_Archive_Process__c</referenceTo>
    <relationshipLabel>GRAX Data Records</relationshipLabel>
    <relationshipName>GRAX_Data_Records</relationshipName>
    <type>Lookup</type>
</CustomField>