GRAXConnect/main/default/objects/GRAX_Data_Record__c/fields/GRAX_Schedule_Process__c.field-meta.xml
<CustomField>
    <fullName>GRAX_Schedule_Process__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>GRAX_Schedule_Process</description>
    <label>GRAX Schedule Process</label>
    <referenceTo>GRAX_Schedule_Process__c</referenceTo>
    <relationshipLabel>GRAX Data Records</relationshipLabel>
    <relationshipName>GRAX_Data_Records</relationshipName>
    <type>Lookup</type>
</CustomField>