GRAXConnect/main/default/objects/GRAX_Data_Record__c/fields/Last_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Sent_Date__c</fullName>
    <description>Last_Sent_Date</description>
    <label>Last Sent Date</label>
    <type>DateTime</type>
</CustomField>