GRAXConnect/main/default/objects/GRAX_Data_Record__c/fields/of_Times_Sent__c.field-meta.xml
<CustomField>
    <fullName>of_Times_Sent__c</fullName>
    <label># of Times Sent</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>