GRAXConnect/main/default/objects/GRAX_Data_Record__c/fields/Records_Sent_to_GRAX__c.field-meta.xml
<CustomField>
    <fullName>Records_Sent_to_GRAX__c</fullName>
    <label># Records Sent to GRAX</label>
    <summaryFilterItems>
        <field>GRAX_Data_Record_Id__c.Status__c</field>
        <operation>equals</operation>
        <value>Sent to GRAX</value>
    </summaryFilterItems>
    <summaryForeignKey>GRAX_Data_Record_Id__c.GRAX_Data_Record__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>