GRAXConnect/main/default/objects/GRAX_Data_Record__c/fields/Records_To_Process__c.field-meta.xml
<CustomField>
    <fullName>Records_To_Process__c</fullName>
    <label># Records To Process</label>
    <summaryForeignKey>GRAX_Data_Record_Id__c.GRAX_Data_Record__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>