GRAXConnect/main/default/objects/GRAX_Data_Record__c/fields/Salesforce_ID__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_ID__c</fullName>
    <label>Salesforce ID</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>