GRAXConnect/main/default/objects/GRAX_Data_Record__c/fields/Salesforce_Object__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Object__c</fullName>
    <label>Salesforce Object</label>
    <type>TextArea</type>
</CustomField>