GRAXConnect/main/default/objects/GRAX_Data_Record__c/fields/Sched_Proc_Hierarchy_Unique_Key__c.field-meta.xml
<CustomField>
    <fullName>Sched_Proc_Hierarchy_Unique_Key__c</fullName>
    <description>Sched_Proc_Hierarchy_Unique_Key</description>
    <label>Sched Proc Hierarchy Unique Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>