GRAXConnect/main/default/objects/GRAX_Data_Record__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Sent</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Sent Successful</fullName>
            </value>
            <value>
                <fullName>Not Processed - Queuable Jobs Full</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>